Agregados punteros en Socio hacia Mascota y Consulta; Get y Set de cada uno; Las funciones 'obtenerRacionDiaria' de Perro y Gato; Y creado cuerpo de main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ add_executable(PAV-2019
 
         DtFecha.cpp
         DtFecha.h
-        perro.h Consulta.h Consulta.cpp Gato.h Perro.cpp Gato.cpp)
+        Perro.h Consulta.h Consulta.cpp Gato.h Perro.cpp Gato.cpp)
